# smart_sensor

./: CMakeLists.txt  main.cpp
